force-app/main/default/objects/Artist__c/fields/Href__c.field-meta.xml
<CustomField>
    <fullName>Href__c</fullName>
    <label>Href</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>