force-app/main/default/objects/Artist__c/fields/Popularity__c.field-meta.xml
<CustomField>
    <fullName>Popularity__c</fullName>
    <label>Popularity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>